--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,17 @@
   "imageSize": 100,
   "commit": false,
   "commitConvention": "none",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "nobrayner",
+      "name": "Braydon Hall",
+      "avatar_url": "https://avatars.githubusercontent.com/u/40751395?v=4",
+      "profile": "https://github.com/nobrayner",
+      "contributions": [
+        "code",
+        "ideas"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
