chore: add underscorefunk to all contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,6 +19,16 @@
         "code",
         "ideas"
       ]
+    },
+    {
+      "login": "underscorefunk",
+      "name": "John Funk",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4334829?v=4",
+      "profile": "https://github.com/underscorefunk",
+      "contributions": [
+        "ideas",
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7
